--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,19 @@
         <relativePath/>
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>sample-app</artifactId>
+    <artifactId>queryDSL</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>sample-app</name>
-    <description>Sample project to quickly build your project baseline</description>
+    <name>queryDSL</name>
+    <description>example for using query DSL library</description>
 
     <properties>
+        <mysema.maven.version>1.1.3</mysema.maven.version>
         <java.version>8</java.version>
         <jib-maven-plugin.version>2.4.0</jib-maven-plugin.version>
         <sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
 
-        <docker.image.name>sampleapp</docker.image.name>
+        <docker.image.name>queryDSL</docker.image.name>
         <test.results.directory>${project.build.directory}/test-results</test.results.directory>
         <junit.itReportFolder>${test.results.directory}/integrationTest</junit.itReportFolder>
         <junit.utReportFolder>${test.results.directory}/test</junit.utReportFolder>
@@ -109,6 +110,23 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-mongodb</artifactId>
+            <version>${querydsl.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mongodb</groupId>
+                    <artifactId>mongo-java-driver</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <version>${querydsl.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -132,6 +150,23 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>${mysema.maven.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/generated-sources/java</outputDirectory>
+                            <processor>org.springframework.data.mongodb.repository.support.MongoAnnotationProcessor</processor>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
 
@@ -283,6 +318,8 @@
                         </execution>
                     </executions>
                 </plugin>
+
+
             </plugins>
         </pluginManagement>
     </build>
