--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8012
 
 spring:
-  application.name: sample-app
+  application.name: queryDSL
   data:
     mongodb:
       uri: mongodb://localhost:27017/test
